include/gwent/c/core.h

typedef enum gwent_c_result_code {
    GWENT_C_OK = 0,
    GWENT_C_INVALID_ARGUMENT = 1,
    GWENT_C_OUT_OF_RANGE = 2,
    GWENT_C_EXCEPTION = 3,
    GWENT_C_ALLOCATION_FAILURE = 4,
    GWENT_C_STALE_DECISION = 5,
    GWENT_C_OPTION_OVERFLOW = 6,
    GWENT_C_OBJECT_OVERFLOW = 7,
    GWENT_C_PREFIX_OVERFLOW = 8
} gwent_c_result_code;
typedef enum gwent_rl_reward_mode {
    GWENT_RL_REWARD_TERMINAL_ONLY = 0,
    GWENT_RL_REWARD_ROUND_SHAPING = 1,
    GWENT_RL_REWARD_DENSE_SHAPING = 2,
    /* Gwent-specific strategic shaping: reward round efficiency/resources,
       not raw damage/boost events. Match outcome remains the dominant signal. */
    GWENT_RL_REWARD_STRATEGIC_SHAPING = 3
} gwent_rl_reward_mode;
typedef struct gwent_rl_reward_config {
    int mode;

    float final_win;
    float final_loss;
    float final_draw;

    float round_win;
    float round_loss;
    float round_draw;

    float score_delta_weight;
    float damage_weight;
    float boost_weight;
    float armor_weight;
    float status_weight;
    float removal_weight;
    float card_play_cost;
    float leader_use_cost;
    float order_use_cost;
    float discard_card_cost;
    float secured_pass_reward;
    float secured_overplay_cost;
    float hand_delta_round_weight;
    int score_delta_contested_only;

    /* Strategic shaping (mode=GWENT_RL_REWARD_STRATEGIC_SHAPING).
       card_cost = winner cards spent this round - loser cards spent this round.
       Positive card_cost means the winner paid card disadvantage to win. */
    float round1_win_base;
    float round1_card_cost_weight;
    float round1_excess_card_penalty;
    float round2_win_base;
    float round2_card_cost_weight;
    float round2_excess_card_penalty;
    float close_round_win_bonus;
    int close_round_win_margin_cap;

    float max_step_reward_abs;
} gwent_rl_reward_config;
typedef struct gwent_rl_collector gwent_rl_collector;
typedef struct gwent_rl_collector_config {
    size_t num_envs;
    size_t max_batch_size;
    uint64_t base_seed;
    int starting_player_id;      /* -1 means use default deterministic setup. */
    int shuffle_decks;           /* 0 = false, non-zero = true. */
    int auto_reset_done_envs;    /* 0 = keep terminal envs out of batches. */
    int enable_invariants;       /* 0 = disabled, non-zero = AfterApply. */
    int current_player_perspective;
    int include_private_info;
    gwent_rl_reward_config reward_config;
    int player0_deck_id;        /* GWENT_RL_DECK_A or GWENT_RL_DECK_B. */
    int player1_deck_id;        /* GWENT_RL_DECK_A or GWENT_RL_DECK_B. */
} gwent_rl_collector_config;
typedef struct gwent_rl_matchup_config {
    int player0_deck_id;        /* Index into generated supported_deck_ids(). */
    int player1_deck_id;
    uint32_t weight;            /* Positive deterministic sampling weight. */
} gwent_rl_matchup_config;
typedef struct gwent_rl_inference_batch {
    size_t count;
    size_t max_count;

    const gwent_rl_batch_item* items;

    const float* global_features;        /* [B, GWENT_RL_GLOBAL_FEATURE_COUNT] */
    const int* object_entity_ids;        /* [B, GWENT_RL_MAX_OBJECTS] */
    const int* object_card_ids;          /* [B, GWENT_RL_MAX_OBJECTS] */
    const int* object_owner_ids;         /* [B, GWENT_RL_MAX_OBJECTS] */
    const int* object_controller_ids;    /* [B, GWENT_RL_MAX_OBJECTS] */
    const int* object_zone_ids;          /* [B, GWENT_RL_MAX_OBJECTS] */
    const int* object_row_ids;           /* [B, GWENT_RL_MAX_OBJECTS] */
    const int* object_slot_indices;      /* [B, GWENT_RL_MAX_OBJECTS] */
    const unsigned char* object_mask;    /* [B, GWENT_RL_MAX_OBJECTS] */
    const float* object_features;        /* [B, GWENT_RL_MAX_OBJECTS, GWENT_RL_OBJECT_FEATURE_COUNT] */

    const int* option_kind_ids;          /* [B, GWENT_RL_MAX_OPTIONS] */
    const int* option_card_ids;          /* [B, GWENT_RL_MAX_OPTIONS] */
    const int* option_source_object_indices; /* [B, GWENT_RL_MAX_OPTIONS] */
    const int* option_target_object_indices; /* [B, GWENT_RL_MAX_OPTIONS] */
    const int* option_target_side_ids;   /* [B, GWENT_RL_MAX_OPTIONS] */
    const int* option_target_zone_ids;   /* [B, GWENT_RL_MAX_OPTIONS] */
    const int* option_target_row_ids;    /* [B, GWENT_RL_MAX_OPTIONS] */
    const int* option_insert_positions;  /* [B, GWENT_RL_MAX_OPTIONS] */
    const int* option_hand_slot_indices; /* [B, GWENT_RL_MAX_OPTIONS] */
    const uint64_t* option_stable_hashes;/* [B, GWENT_RL_MAX_OPTIONS] */
    const unsigned char* option_mask;    /* [B, GWENT_RL_MAX_OPTIONS] */
    const float* option_features;        /* [B, GWENT_RL_MAX_OPTIONS, GWENT_RL_OPTION_FEATURE_COUNT] */

    const int* prefix_kind_ids;          /* [B, GWENT_RL_MAX_PREFIX] */
    const int* prefix_source_object_indices; /* [B, GWENT_RL_MAX_PREFIX] */
    const int* prefix_target_object_indices; /* [B, GWENT_RL_MAX_PREFIX] */
    const int* prefix_card_ids;          /* [B, GWENT_RL_MAX_PREFIX] */
    const int* prefix_row_ids;           /* [B, GWENT_RL_MAX_PREFIX] */
    const int* prefix_insert_positions;  /* [B, GWENT_RL_MAX_PREFIX] */
    const unsigned char* prefix_mask;    /* [B, GWENT_RL_MAX_PREFIX] */
} gwent_rl_inference_batch;
typedef struct gwent_rl_batch_action {
    size_t env_index;
    uint64_t decision_serial;
    size_t option_index;
} gwent_rl_batch_action;
typedef struct gwent_rl_apply_result_batch {
    size_t count;
    const gwent_rl_batch_step_result* results;
} gwent_rl_apply_result_batch;
typedef struct gwent_rl_pass_probe_result {
    int applicable;
    int actor_id;
    int outcome;
    int actor_hand_count;
    int opponent_hand_count;
    int hand_diff_actor_minus_opponent;
} gwent_rl_pass_probe_result;
GWENT_C_API gwent_rl_reward_config gwent_rl_default_reward_config(void);
GWENT_C_API gwent_rl_collector_config gwent_rl_default_collector_config(void);
GWENT_C_API gwent_rl_collector* gwent_rl_collector_create(const gwent_rl_collector_config* config);
GWENT_C_API gwent_rl_collector* gwent_rl_collector_create_with_matchups(
    const gwent_rl_collector_config* config,
    const gwent_rl_matchup_config* matchups,
    size_t matchup_count);
GWENT_C_API void gwent_rl_collector_destroy(gwent_rl_collector* collector);
GWENT_C_API gwent_c_result_code gwent_rl_collector_set_game_limit(
    gwent_rl_collector* collector,
    size_t max_games);
GWENT_C_API gwent_c_result_code gwent_rl_collector_collect(
    gwent_rl_collector* collector,
    gwent_rl_inference_batch* out_batch);
GWENT_C_API gwent_c_result_code gwent_rl_collector_apply_actions(
    gwent_rl_collector* collector,
    const gwent_rl_batch_action* actions,
    size_t action_count,
    gwent_rl_apply_result_batch* out_results);
GWENT_C_API gwent_c_result_code gwent_rl_collector_probe_pass(
    const gwent_rl_collector* collector,
    size_t env_index,
    gwent_rl_pass_probe_result* out_probe);
GWENT_C_API size_t gwent_rl_collector_env_count(const gwent_rl_collector* collector);
GWENT_C_API size_t gwent_rl_collector_completed_episodes(const gwent_rl_collector* collector);
GWENT_C_API size_t gwent_rl_collector_total_steps(const gwent_rl_collector* collector);
GWENT_C_API size_t gwent_rl_collector_total_resets(const gwent_rl_collector* collector);
GWENT_C_API const char* gwent_rl_reward_mode_name(gwent_rl_reward_mode mode);
GWENT_C_API uint32_t gwent_rl_schema_version(void);
GWENT_C_API uint32_t gwent_rl_action_grammar_version(void);
GWENT_C_API uint32_t gwent_rl_reward_config_version(void);
GWENT_C_API const char* gwent_rl_global_feature_name(size_t index);
GWENT_C_API const char* gwent_rl_object_feature_name(size_t index);
GWENT_C_API const char* gwent_rl_option_feature_name(size_t index);
GWENT_C_API const char* gwent_c_result_code_name(gwent_c_result_code code);