python/src/gwent_rl/_ctypes.py


    # Preserve order while removing duplicates.
    seen: set[str] = set()
    unique: list[Path] = []
    for path in candidates:
        key = str(path)
        if key not in seen:
            unique.append(path)
            seen.add(key)
    return unique


def load_library(path: Optional[str] = None) -> ct.CDLL:
    errors: list[str] = []
    for candidate in candidate_library_paths(path):
        if candidate.exists():
            try:
                lib = ct.CDLL(str(candidate))
                bind_library(lib)
                _validate_library_versions(lib, candidate)
                return lib
            except (OSError, AttributeError, RuntimeError) as exc:
                errors.append(f"{candidate}: {exc}")

    found = find_library("gwent_core")
    if found:
        try:
            lib = ct.CDLL(found)
            bind_library(lib)
            _validate_library_versions(lib, found)
            return lib
        except (OSError, AttributeError, RuntimeError) as exc:
            errors.append(f"{found}: {exc}")

    searched = "\n".join(f"  - {p}" for p in candidate_library_paths(path))
    detail = "\n".join(errors)
    raise RuntimeError(
        "Could not load gwent_core shared library. Build with "
        "-DBUILD_SHARED_LIBS=ON and set GWENT_CORE_LIBRARY.\n"
        f"Searched:\n{searched}\n{detail}"
    )



def _validate_library_versions(lib: ct.CDLL, source) -> None:
    schema = int(lib.gwent_rl_schema_version())
    if schema != GWENT_RL_SCHEMA_VERSION:
        raise RuntimeError(
            f"{source}: RL schema v{schema}, expected v{GWENT_RL_SCHEMA_VERSION}"
        )
    grammar_version = int(lib.gwent_rl_action_grammar_version())
    if grammar_version != GWENT_RL_ACTION_GRAMMAR_VERSION:
        raise RuntimeError(
            f"{source}: action grammar v{grammar_version}, expected "
            f"v{GWENT_RL_ACTION_GRAMMAR_VERSION}"
        )
    reward_version = int(lib.gwent_rl_reward_config_version())
    if reward_version != GWENT_RL_REWARD_CONFIG_VERSION:
        raise RuntimeError(
            f"{source}: reward config ABI v{reward_version}, expected "
            f"v{GWENT_RL_REWARD_CONFIG_VERSION}"
        )


def bind_library(lib: ct.CDLL) -> None:
    lib.gwent_rl_default_reward_config.argtypes = []
    lib.gwent_rl_default_reward_config.restype = GwentRlRewardConfig

    lib.gwent_rl_default_collector_config.argtypes = []
    lib.gwent_rl_default_collector_config.restype = GwentRlCollectorConfig

    lib.gwent_rl_collector_create.argtypes = [ct.POINTER(GwentRlCollectorConfig)]
    lib.gwent_rl_collector_create.restype = ct.c_void_p
    lib.gwent_rl_collector_create_with_matchups.argtypes = [
        ct.POINTER(GwentRlCollectorConfig),
        ct.POINTER(GwentRlMatchupConfig),
        ct.c_size_t,
    ]
    lib.gwent_rl_collector_create_with_matchups.restype = ct.c_void_p

    lib.gwent_rl_collector_destroy.argtypes = [ct.c_void_p]
    lib.gwent_rl_collector_destroy.restype = None

    lib.gwent_rl_collector_set_game_limit.argtypes = [ct.c_void_p, ct.c_size_t]
    lib.gwent_rl_collector_set_game_limit.restype = ct.c_int

    lib.gwent_rl_collector_collect.argtypes = [ct.c_void_p, ct.POINTER(GwentRlInferenceBatch)]
    lib.gwent_rl_collector_collect.restype = ct.c_int

    lib.gwent_rl_collector_apply_actions.argtypes = [
        ct.c_void_p,
        ct.POINTER(GwentRlBatchAction),
        ct.c_size_t,
        ct.POINTER(GwentRlApplyResultBatch),
    ]
    lib.gwent_rl_collector_apply_actions.restype = ct.c_int

    lib.gwent_rl_collector_probe_pass.argtypes = [
        ct.c_void_p,
        ct.c_size_t,
        ct.POINTER(GwentRlPassProbeResult),
    ]
    lib.gwent_rl_collector_probe_pass.restype = ct.c_int

    lib.gwent_rl_collector_env_count.argtypes = [ct.c_void_p]
    lib.gwent_rl_collector_env_count.restype = ct.c_size_t

    lib.gwent_rl_collector_completed_episodes.argtypes = [ct.c_void_p]
    lib.gwent_rl_collector_completed_episodes.restype = ct.c_size_t

    lib.gwent_rl_collector_total_steps.argtypes = [ct.c_void_p]
    lib.gwent_rl_collector_total_steps.restype = ct.c_size_t

    lib.gwent_rl_collector_total_resets.argtypes = [ct.c_void_p]
    lib.gwent_rl_collector_total_resets.restype = ct.c_size_t

    lib.gwent_c_result_code_name.argtypes = [ct.c_int]
    lib.gwent_c_result_code_name.restype = ct.c_char_p

    lib.gwent_rl_reward_mode_name.argtypes = [ct.c_int]
    lib.gwent_rl_reward_mode_name.restype = ct.c_char_p

    lib.gwent_rl_schema_version.argtypes = []
    lib.gwent_rl_schema_version.restype = ct.c_uint32
    lib.gwent_rl_action_grammar_version.argtypes = []
    lib.gwent_rl_action_grammar_version.restype = ct.c_uint32
    lib.gwent_rl_reward_config_version.argtypes = []
    lib.gwent_rl_reward_config_version.restype = ct.c_uint32
    lib.gwent_rl_global_feature_name.argtypes = [ct.c_size_t]
    lib.gwent_rl_global_feature_name.restype = ct.c_char_p
    lib.gwent_rl_object_feature_name.argtypes = [ct.c_size_t]
    lib.gwent_rl_object_feature_name.restype = ct.c_char_p
    lib.gwent_rl_option_feature_name.argtypes = [ct.c_size_t]
    lib.gwent_rl_option_feature_name.restype = ct.c_char_p


def result_code_name(lib: ct.CDLL, code: int) -> str:
    try:
        raw = lib.gwent_c_result_code_name(int(code))
        if raw:
            return raw.decode("utf-8", errors="replace")
    except Exception:
        pass
    return f"result_code_{code}"
